--- a/SkoocApp/SkoocApp.plist
+++ b/SkoocApp/SkoocApp.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://nguyenductoan1995.github.io/Skoocapp.ipa</string>
+					<string>https://nguyenductoan1995.github.io/SkoocApp/Skoocpp.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
